--- a/v2/dest/assets/css.sass/style.scss
+++ b/v2/dest/assets/css.sass/style.scss
@@ -5,12 +5,17 @@
 
 // Config modules
 
-// @import 'modules/_vars.scss';
+@import 'modules/_vars.scss';
 // @import 'modules/_clearfix.scss';
 // @import 'modules/_reset.scss';
 
 @import 'modules/_normalize.scss';
-@import 'modules/_app.scss';
+@import 'modules/_common.scss';
+@import 'modules/_home.scss';
+@import 'modules/_works.scss';
+@import 'modules/_slick.scss';
+@import 'modules/_slick-theme.scss';
+@import 'modules/_toggle-switch-theme.scss';
 
 //----------------------------------*\
 // SCSS MIXINS
