--- a/v2/dest/assets/css.sass/modules/_vars.scss
+++ b/v2/dest/assets/css.sass/modules/_vars.scss
@@ -8,6 +8,7 @@
     --toggleSwitch_ico_lightColor:#999999;
     --logo_column_darkColor:#1A1A1A;
     --column_darkColor:#1A1A1A;
+    --darkColor:#1A1A1A;
 }
 
 $inWrapRatiowidth:1200;
