--- a/v2/dest/assets/css.sass/modules/_common.scss
+++ b/v2/dest/assets/css.sass/modules/_common.scss
@@ -1,7 +1,5 @@
-
-
 /**********************************************************************/
-/* pc common
+/* pc common light
 /**********************************************************************/
 html{
     font-size: 62.5%; /*ベースを10pxにしています*/
@@ -16,9 +14,7 @@ body{
     font-size: 1.0rem; /*10px*/
     transition: all 0.5s ease;
 }
-body.is-dark{
-    background-color: var(--body_darkColor);
-}
+
 
 a{
     color: #333;
@@ -43,14 +39,218 @@ a:visited{
 }
 .wf-notosansjapanese { font-family: "Noto Sans JP"; }
 
+/*-----------------*/
+/* loading
+/*-----------------*/
+#loading_overray{
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #222;
+    z-index: 10;
+  }
+  
+  #loading_overray .bg{
+    position: fixed;
+    width: 0%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    /*display: flex;
+    justify-content: center;
+    align-items: center;*/
+    background: #fff;
+    z-index: 10;
+  }
+  #load {
+    position:absolute;
+    width:600px;
+    height:36px;
+    left:50%;
+    top:50%;
+    margin-top: -18px;
+    margin-left:-300px;
+    overflow:visible;
+    -webkit-user-select:none;
+    -moz-user-select:none;
+    -ms-user-select:none;
+    user-select:none;
+    cursor:default;
+  }
+  
+  #load div {
+    position:absolute;
+    width:20px;
+    height:36px;
+    opacity:0;
+    /*font-family:Helvetica, Arial, sans-serif;*/
+    animation:move 2s linear infinite;
+    -o-animation:move 2s linear infinite;
+    -moz-animation:move 2s linear infinite;
+    -webkit-animation:move 2s linear infinite;
+    transform:rotate(180deg);
+    -o-transform:rotate(180deg);
+    -moz-transform:rotate(180deg);
+    -webkit-transform:rotate(180deg);
+    color:#fff;
+  }
+  
+  #load div:nth-child(2) {
+    animation-delay:0.2s;
+    -o-animation-delay:0.2s;
+    -moz-animation-delay:0.2s;
+    -webkit-animation-delay:0.2s;
+  }
+  #load div:nth-child(3) {
+    animation-delay:0.4s;
+    -o-animation-delay:0.4s;
+    -webkit-animation-delay:0.4s;
+    -webkit-animation-delay:0.4s;
+  }
+  #load div:nth-child(4) {
+    animation-delay:0.6s;
+    -o-animation-delay:0.6s;
+    -moz-animation-delay:0.6s;
+    -webkit-animation-delay:0.6s;
+  }
+  #load div:nth-child(5) {
+    animation-delay:0.8s;
+    -o-animation-delay:0.8s;
+    -moz-animation-delay:0.8s;
+    -webkit-animation-delay:0.8s;
+  }
+  #load div:nth-child(6) {
+    animation-delay:1s;
+    -o-animation-delay:1s;
+    -moz-animation-delay:1s;
+    -webkit-animation-delay:1s;
+  }
+  #load div:nth-child(7) {
+    animation-delay:1.2s;
+    -o-animation-delay:1.2s;
+    -moz-animation-delay:1.2s;
+    -webkit-animation-delay:1.2s;
+  }
+  
+  @keyframes move {
+    0% {
+      left:0;
+      opacity:0;
+    }
+      35% {
+          left: 41%;
+          -moz-transform:rotate(0deg);
+          -webkit-transform:rotate(0deg);
+          -o-transform:rotate(0deg);
+          transform:rotate(0deg);
+          opacity:1;
+      }
+      65% {
+          left:59%;
+          -moz-transform:rotate(0deg);
+          -webkit-transform:rotate(0deg);
+          -o-transform:rotate(0deg);
+          transform:rotate(0deg);
+          opacity:1;
+      }
+      100% {
+          left:100%;
+          -moz-transform:rotate(-180deg);
+          -webkit-transform:rotate(-180deg);
+          -o-transform:rotate(-180deg);
+          transform:rotate(-180deg);
+          opacity:0;
+      }
+  }
+  
+  @-moz-keyframes move {
+      0% {
+          left:0;
+          opacity:0;
+      }
+      35% {
+          left:41%;
+          -moz-transform:rotate(0deg);
+          transform:rotate(0deg);
+          opacity:1;
+      }
+      65% {
+          left:59%;
+          -moz-transform:rotate(0deg);
+          transform:rotate(0deg);
+          opacity:1;
+      }
+      100% {
+          left:100%;
+          -moz-transform:rotate(-180deg);
+          transform:rotate(-180deg);
+          opacity:0;
+      }
+  }
+  
+  @-webkit-keyframes move {
+      0% {
+          left:0;
+          opacity:0;
+      }
+      35% {
+          left:41%;
+          -webkit-transform:rotate(0deg);
+          transform:rotate(0deg);
+          opacity:1;
+      }
+      65% {
+          left:59%;
+          -webkit-transform:rotate(0deg);
+          transform:rotate(0deg);
+          opacity:1;
+      }
+      100% {
+          left:100%;
+          -webkit-transform:rotate(-180deg);
+          transform:rotate(-180deg);
+          opacity:0;
+      }
+  }
+  
+  @-o-keyframes move {
+      0% {
+          left:0;
+          opacity:0;
+      }
+      35% {
+          left:41%;
+          -o-transform:rotate(0deg);
+          transform:rotate(0deg);
+          opacity:1;
+      }
+      65% {
+          left:59%;
+          -o-transform:rotate(0deg);
+          transform:rotate(0deg);
+          opacity:1;
+      }
+      100% {
+          left:100%;
+          -o-transform:rotate(-180deg);
+          transform:rotate(-180deg);
+          opacity:0;
+      }
+  }
+  
 //--------------------------
 // .toggleSwitch
 //--------------------------
+
 .toggleSwitch{
     display: block;
+    position: relative;
     width: 80px;
     height: 24px;
-    margin: 40px auto 0 auto;
+    margin:0px auto 0;
     padding: 0px 0px 0px 0px;
     background: #fff;
     border-radius: 12px;
@@ -59,40 +259,68 @@ a:visited{
     font-size: 12px;
     outline: none;
     border: none;
+    z-index: 1;
+    cursor: pointer;
     span{
         display: block;
         padding: 0px;
     }
-    span.light{
-        width: 65px;
+    span.labeltxt{
+        width: 80px;
         height: 24px;
-        padding-left: 15px;
         background: #ffffff;
         border-radius: 14px;
         border: 1px solid #ccc;
         position: relative;
-        .btn{
+        transition: all 0.3s cubic-bezier(0.37, 0.04, 0.54, 0.98);;         
+    }
+    
+    span.labeltxt:after ,
+    span.labeltxt:before {
+        position: absolute;
+        top: 0px;
+        left: 0px;
+        transition: all 0.3s cubic-bezier(0.37, 0.04, 0.54, 0.98);
+    }
+
+    span.labeltxt:before{
+        opacity: 1;
+        content: "light";
+        left: 3rem;
+    }
+    span.labeltxt:after{
+        opacity: 0;
+        content: "dark";
+        left: 2rem;
+    }
+
+    span.handle{
+        position: absolute;
+        background: #fff;
+        display: block;
+        width: 24px;
+        height: 24px;
+        border-radius: 14px;
+        border: 1px solid #ccc;
+        top: 0px;
+        left: 0px;
+        z-index: 2;
+        transition: all 0.3s cubic-bezier(0.37, 0.04, 0.54, 0.98);;
+        box-shadow: 0 0 2px rgba(0, 0, 0, 0.2);
+        &:after{
             position: absolute;
             display: block;
-            width: 24px;
-            height: 24px;
-            border-radius: 14px;
-            border: 1px solid #ccc;
-            top: -1px;
-            left: -1px;
-            &:after{
-                position: absolute;
-                display: block;
-                content: "";
-                background-color: var(--toggleSwitch_ico_lightColor);
-                box-shadow: 0px 0px 0 0 var(--toggleSwitch_ico_lightColor),4px 0px 0 0 var(--toggleSwitch_ico_lightColor),8px 0px 0 0 var(--toggleSwitch_ico_lightColor),2px 2px 0 0 var(--toggleSwitch_ico_lightColor),6px 2px 0 0 var(--toggleSwitch_ico_lightColor),0px 4px 0 0 var(--toggleSwitch_ico_lightColor),4px 4px 0 0 var(--toggleSwitch_ico_lightColor),8px 4px 0 0 var(--toggleSwitch_ico_lightColor),2px 6px 0 0 var(--toggleSwitch_ico_lightColor),6px 6px 0 0 var(--toggleSwitch_ico_lightColor),0px 8px 0 0 var(--toggleSwitch_ico_lightColor),4px 8px 0 0 var(--toggleSwitch_ico_lightColor),8px 8px 0 0 var(--toggleSwitch_ico_lightColor),;
-                height: 2px;
-                width: 2px;
-                top: 7px;
-                left: 7px;
-            }
+            content: "";
+            background-color: var(--toggleSwitch_ico_lightColor);
+            box-shadow: 0px 0px 0 0 var(--toggleSwitch_ico_lightColor),4px 0px 0 0 var(--toggleSwitch_ico_lightColor),8px 0px 0 0 var(--toggleSwitch_ico_lightColor),2px 2px 0 0 var(--toggleSwitch_ico_lightColor),6px 2px 0 0 var(--toggleSwitch_ico_lightColor),0px 4px 0 0 var(--toggleSwitch_ico_lightColor),4px 4px 0 0 var(--toggleSwitch_ico_lightColor),8px 4px 0 0 var(--toggleSwitch_ico_lightColor),2px 6px 0 0 var(--toggleSwitch_ico_lightColor),6px 6px 0 0 var(--toggleSwitch_ico_lightColor),0px 8px 0 0 var(--toggleSwitch_ico_lightColor),4px 8px 0 0 var(--toggleSwitch_ico_lightColor),8px 8px 0 0 var(--toggleSwitch_ico_lightColor),;
+            height: 2px;
+            width: 2px;
+            top: 7px;
+            left: 7px;
         }
     }
+    
+    
 }
 
 //--------------------------
@@ -161,6 +389,34 @@ a:visited{
     height: 0;
     visibility: visible;
     display: block;
+}
+
+/**********************************************************************/
+/* pc common dark
+/**********************************************************************/
+body.is-dark{
+    background-color: var(--body_darkColor);
+
+    .toggleSwitch{
+        span.labeltxt{
+            background:var(--darkColor);
+            border-radius: 14px;
+            border: 1px solid #ffffff;
+            position: relative;     
+        }
+        span.labeltxt:before{
+            opacity: 0;
+        }
+        span.labeltxt:after{
+            opacity: 1;
+            color: #fff;
+            content: "dark";
+            margin-right: 1.5rem;
+        }
+        span.handle{
+            left: calc(80px - 24px);
+        }
+    }
 }
 
 /**********************************************************************/
