--- a/v2/dest/assets/css.sass/modules/_common.scss
+++ b/v2/dest/assets/css.sass/modules/_common.scss
@@ -49,7 +49,7 @@ a:visited{
     display: flex;
     justify-content: center;
     align-items: center;
-    background: #222;
+    background: #fff;
     z-index: 10;
     font-size: 1.4rem;
   }
@@ -60,10 +60,7 @@ a:visited{
     height: 100%;
     top: 0;
     left: 0;
-    /*display: flex;
-    justify-content: center;
-    align-items: center;*/
-    background: #fff;
+    background: #eee;
     z-index: 10;
   }
   #load {
@@ -80,9 +77,11 @@ a:visited{
     -ms-user-select:none;
     user-select:none;
     cursor:default;
+    
   }
   
   #load div {
+    color: #333;
     position:absolute;
     width:20px;
     height:36px;
@@ -96,7 +95,6 @@ a:visited{
     -o-transform:rotate(180deg);
     -moz-transform:rotate(180deg);
     -webkit-transform:rotate(180deg);
-    color:#fff;
   }
   
   #load div:nth-child(2) {
@@ -332,6 +330,7 @@ a:visited{
     display: block;
     width: 50px;
     height: 50px;
+    background-color: transparent;
     outline: 0;
     border: none;
     top: 40px;
@@ -397,6 +396,18 @@ a:visited{
 body.is-dark{
     background-color: var(--body_darkColor);
 
+    #loading_overray{
+        background: #1A1A1A;
+        z-index: 10;
+        font-size: 1.4rem;
+    }
+    #loading_overray .bg{
+        background: #333;
+      }
+    #load div {
+        color: #fff;
+    }
+      
     .toggleSwitch{
         span.labeltxt{
             background:var(--darkColor);
