--- a/v2/dest/assets/css.sass/modules/_works.scss
+++ b/v2/dest/assets/css.sass/modules/_works.scss
@@ -32,7 +32,7 @@
                 width: 960px;
                 box-sizing: border-box;
                 padding: 30px;
-                background: var(--bg_currentColor);
+                background: #fff;
                 border-radius: 20px;
                 margin-left: 40px;
                 h1{
