--- a/v2/dest/assets/css.sass/modules/_home.scss
+++ b/v2/dest/assets/css.sass/modules/_home.scss
@@ -112,10 +112,10 @@ canvas {
         // flex-wrap: wrap;
         li{
            opacity: 1;
-        //    width: $itemRatioWidth;
            width: 184px;
            height: 184px;
            margin-bottom: 20px;
+           transition: all 0.6s ease-in-out;
            a{
             background: #fff;
             display: flex;
@@ -137,8 +137,11 @@ canvas {
         li.item{
             display: flex;
             align-items: center;
-            justify-content: center;
-            
+            justify-content: center; 
+        }
+        li.item.is-active{
+            margin-left: 204px;
+            z-index: 3;
         }
         
         li.transparentItem{
