--- a/v2/dest/assets/css.sass/modules/_home.scss
+++ b/v2/dest/assets/css.sass/modules/_home.scss
@@ -25,8 +25,8 @@
 
 .bgVector{
     position: absolute;
-    width: 600px;
-    height: 600px;
+    width: 800px;
+    height: 800px;
     background-repeat: no-repeat;
     background-size: contain;
     z-index: 1; 
@@ -35,32 +35,32 @@
 .bgVector.box01{
     top: 50%;
     left: 50%;
-    margin-left: -300px;
-    margin-top: -300px;
+    margin-left: -400px;
+    margin-top: -400px;
     background-image: url(../images/bgVector.svg);
     animation: rotateAnimation 200s infinite normal; 
  }
  .bgVector.box02{
-    top: 0%;
-    left: 0%;
+    top: -10%;
+    left: -10%;
     background-image: url(../images/bgVector01.svg);
     animation: rotateAnimation 190s infinite normal; 
  }
  .bgVector.box03{
-    top: 0%;
-    right: 0%;
+    top: -10%;
+    right: -10%;
     background-image: url(../images/bgVector02.svg);
     animation: rotateAnimation 180s infinite normal; 
  }
  .bgVector.box04{
-    bottom: 0%;
-    left: 0%;
+    bottom: -10%;
+    left: -10%;
     background-image: url(../images/bgVector03.svg);
     animation: rotateAnimation 170s infinite normal; 
  }
  .bgVector.box05{
-    bottom: 0%;
-    right: 0%;
+    bottom: -10%;
+    right: -10%;
     background-image: url(../images/bgVector04.svg);
     animation: rotateAnimation 160s infinite normal; 
  }
@@ -101,17 +101,17 @@ canvas {
 #main{
     position: relative;
     width: 100%;
-    // max-width: 1400px;
+    max-width: 1200px;
     margin: 0 auto;
     padding: 50px 0px;
     z-index: 2;
     ul{
         padding:40px 0;
         margin: 0 auto;
-        // display: flex;
-        // flex-wrap: wrap;
+        display: flex;
+        flex-wrap: wrap;
         li{
-           opacity: 1;
+           opacity: 0;
            width: 184px;
            height: 184px;
            margin-bottom: 20px;
