--- a/v2/dest/assets/css.sass/modules/_home.scss
+++ b/v2/dest/assets/css.sass/modules/_home.scss
@@ -1,4 +1,3 @@
-
 /**********************************************************************/
 /* pc home
 /**********************************************************************/
@@ -115,7 +114,7 @@ canvas {
            width: 184px;
            height: 184px;
            margin-bottom: 20px;
-           transition: all 0.6s ease-in-out;
+        //    transition: all 0.6s ease-in-out;
            a{
             background: #fff;
             display: flex;
@@ -125,9 +124,9 @@ canvas {
             height: 100%;
             border-radius: 20px;
             transition: all 0.5s ease;
-            &:hover{
-                box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
-            }
+                &:hover{
+                    box-shadow: $btnHoverBoxshadow;
+                }
             }
         
            img{
