--- a/v2/dest/assets/css.sass/modules/_vars.scss
+++ b/v2/dest/assets/css.sass/modules/_vars.scss
@@ -6,6 +6,7 @@
     --body_lightColor:#EEEEEE;
     --body_darkColor:#333333;
     --toggleSwitch_ico_lightColor:#999999;
+    --toggleSwitch_ico_hoverlightColor:#333333;
     --lightColor:#888888;
     --logo_column_darkColor:#1A1A1A;
     --column_darkColor:#1A1A1A;
@@ -17,3 +18,4 @@ $homeItemColumn:5;
 $bg_borderRadius:20px;
 $itemRatioWidth:calc( #{($inWrapRatiowidth / $homeItemColumn)}  / #{$inWrapRatiowidth} * 100%);
 $sectionMarginBottomRatio:calc( 40 / #{$inWrapRatiowidth} * 100%);
+$btnHoverBoxshadow: 0 0 20px rgba(0, 0, 0, 0.2);
